--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,16 @@ android {
 }
 
 dependencies {
+    //dagger
     def dagger_version = "2.46.1"
-
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
+    //Architecture components
+    implementation "androidx.activity:activity-ktx:1.7.2"
+    implementation "androidx.fragment:fragment-ktx:1.6.0"
+
+    //default
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
